@@ -2,6 +2,8 @@ package capstone.allbom.chatbot.service;
 
 import capstone.allbom.chatbot.domain.Qna;
 import capstone.allbom.chatbot.domain.QnaRepository;
+import capstone.allbom.chatbot.dto.QnaAndTypeResponse;
+import capstone.allbom.chatbot.dto.QnaPair;
 import capstone.allbom.chatbot.dto.QnaResponse;
 import capstone.allbom.common.exception.BadRequestException;
 import capstone.allbom.common.exception.DefaultErrorCode;
@@ -30,7 +32,7 @@ public class QnaService {
     private String CHAT_MALE_IMAGE_URL;
 
     @Transactional
-    public List<QnaResponse> getFifteenQnasByPagination(final Member member, Pageable pageable) {
+    public QnaResponse getFifteenQnasByPagination(final Member member, Pageable pageable) {
         Member savedMember = memberRepository.findById(member.getId())
                 .orElseThrow(() -> new BadRequestException(DefaultErrorCode.NOT_FOUND_MEMBER_ID));
 
@@ -39,21 +41,25 @@ public class QnaService {
         }
 
         List<Qna> qnas = qnaRepository.findAllOrderByCreatedAtPagination(savedMember.getId(), pageable);
-        return qnas.stream()
-                .map(qna -> QnaResponse.from(savedMember, qna))
-                .collect(Collectors.toList());
+        List<QnaPair> qnaPairs = qnas.stream()
+                .map(QnaPair::from)
+                .toList();
+
+        return QnaResponse.from(member, qnaPairs);
     }
 
     @Transactional
-    public List<Qna> getTopFiveQnas(final Member member) {
+    public List<QnaAndTypeResponse> getTopFiveQnas(final Member member) {
         Member savedMember = memberRepository.findById(member.getId())
                 .orElseThrow(() -> new BadRequestException(DefaultErrorCode.NOT_FOUND_MEMBER_ID));
 
-        return qnaRepository.findAllOrderByCreatedAtDesc(savedMember.getId())
+        List<Qna> qnas = qnaRepository.findAllOrderByCreatedAtDesc(savedMember.getId())
                 .stream()
                 .limit(5)
-                .collect(Collectors.toList());
+                .toList();
+
+        return qnas.stream()
+                .map(QnaAndTypeResponse::from)
+                .toList();
     }
-
-
 }
